--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/standard.css">
 </head>
 <body onload="renderNotes()">
-    <h1>Notizblock</h1>
+    <h1>Notizblock Test</h1>
     <div id="content"></div>
     <form onsubmit="NotizHinzufügen();return false">
         <label for="Notiz">Notiz hinzufügen</label>
